--- a/index.html
+++ b/index.html
@@ -456,22 +456,36 @@
                 <div class="description">
                   <h3>Project Brief:</h3>
                   <p>This is a website of an event management company named BLUE JAZZ who provides different facilities
-                    in larger exciting music festivals around the world.
-                    users can checkout, give reviews on orders, and pay with "stripe payment gateway".
-                    reviews are displayed dynamically on the home page.
-                    admin can add new services, also can add new admin and see all orders of other customers.</p>
+                    in larger exciting music festivals around the world.</p>
+                  <ul>
+                    <li>users can checkout, give reviews on orders, and pay with "stripe payment gateway".</li>
+                    <li> reviews are displayed dynamically on the home page.</li>
+                    <li>admin can add new services, also can add new admin and see all orders of other customers.</li>
+                  </ul>
+
                 </div>
                 <div class="info">
                   <h3>Project info</h3>
                   <ul>
                     <!-- <li>Date - <span>april, 2021</span></li> -->
-                    <li><span class="tag-1">Client</span> - <span>pet project</span></li>
+                    <li><span class="tag-1">Client</span> - <span>Pet Project</span></li>
                     <li><span class="tag-1">Frontend</span> -
-                      <span>React.js, React-router, Bootstrap, FontAwesome,
-                        React-form-hook </span>
-                        
+                      <span>React.js</span>,
+                      <span>React-form-hook</span>,
+                      <span>React-router</span>,
+                      <span>Bootstrap</span>,
+                      <span>FontAwesome</span>
+                      <!-- <span class="tag-1-black">React.js</span>
+                      <span class="tag-1-black">React-form-hook</span>
+                      <span class="tag-1-black">React-router</span>
+                      <span class="tag-1-black">Bootstrap</span>
+                      <span class="tag-1-black">FontAwesome</span> -->
                     </li>
-                    <li><span class="tag-1">Backend</span> - <span>Mongodb, Express.js, Firebase</span></li>
+                    <li><span class="tag-1">Backend</span> -
+                      <span>Mongodb</span>,
+                      <span>Express.js</span>,
+                      <span>Firebase</span>,
+                    </li>
                     <li><i class="fab fa-github"></i> <span><a
                           href="https://github.com/Samin1615088/blue-jazz-frontend">Github</a></span></li>
                     <li><i class="far fa-window-maximize"></i> <span><a href="https://bluejazz-2eacf.web.app/">Live
