hide all except active added

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     <div class="close-nav-menu outer-shadow hover-in-shadow">&times;</div>
     <div class="nav-menu-inner">
       <ul>
-        <li><a href="#" class="inner-shadow active">home</a></li>
-        <li><a href="#" class="outer-shadow hover-in-shadow">about</a></li>
-        <li><a href="#" class="outer-shadow hover-in-shadow">services</a></li>
-        <li><a href="#" class="outer-shadow hover-in-shadow">portfolio</a></li>
-        <li><a href="#" class="outer-shadow hover-in-shadow">testimonial</a></li>
-        <li><a href="#" class="outer-shadow hover-in-shadow">contact</a></li>
+        <li><a href="#home" class="link-item inner-shadow active">home</a></li>
+        <li><a href="#about" class="link-item outer-shadow hover-in-shadow">about</a></li>
+        <li><a href="#services" class="link-item outer-shadow hover-in-shadow">services</a></li>
+        <li><a href="#portfolio" class="link-item outer-shadow hover-in-shadow">portfolio</a></li>
+        <li><a href="#blogs" class="link-item outer-shadow hover-in-shadow">blogs</a></li>
+        <li><a href="#contact" class="link-item outer-shadow hover-in-shadow">contact</a></li>
       </ul>
     </div>
     <!-- copyright text -->
@@ -94,14 +94,14 @@
   <!-- effect wrap end -->
 
   <!-- home section start -->
-  <section class="home-section section">
+  <section class="home-section section active" id="home">
     <div class="container">
       <div class="row full-screen align-items-center">
         <div class="home-text">
           <p>Hello</p>
           <h2>I'm Shafkat Samin</h2>
           <h1>Frontend Developer</h1>
-          <a href="#about-section-id" class="btn-1 outer-shadow hover-in-shadow">More About Me</a>
+          <a href="#about" class="link-item btn-1 outer-shadow hover-in-shadow">More About Me</a>
         </div>
         <div class="home-img">
           <div class="img-box inner-shadow">
@@ -114,7 +114,7 @@
   <!-- home section end -->
 
   <!-- about section start -->
-  <section id="about-section-id" class="about-section section">
+  <section class="about-section section" id="about">
     <div class="container">
       <div class="row">
         <div class="section-title">
@@ -146,7 +146,7 @@
           <p>Expertise in developing web pages using React.js, HTML5, CSS3, Bootstrap, SASS, Object-Oriented Javascript,
             ES6, Java, JSON. Good understanding of Document Object Model and DOM Functions.</p>
           <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
-          <a href="#contact-section-id" class="btn-1 outer-shadow hover-in-shadow">Hire Me</a>
+          <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
         </div>
       </div>
       <!-- about tabs start -->
@@ -330,7 +330,7 @@
   <!-- about section end -->
 
   <!-- services section start -->
-  <section class="service-section section">
+  <section class="service-section section" id="services">
     <div class="container">
       <div class="row">
         <div class="section-title">
@@ -409,7 +409,7 @@
   <!-- services section end -->
 
   <!-- portfolio section start -->
-  <section class="portfolio-section section">
+  <section class="portfolio-section section" id="portfolio">
     <div class="container">
       <div class="row">
         <div class="section-title">
@@ -760,7 +760,7 @@
   <!-- blogs section start -->
 
   <!-- blogs section end -->
-  <section class="blog-section section">
+  <section class="blog-section section" id="blogs">
     <div class="container">
       <div class="row">
         <div class="section-title">
@@ -771,7 +771,7 @@
   </section>
 
   <!-- contact section start -->
-  <section id="contact-section-id" class="contact-section section">
+  <section class="contact-section section" id="contact">
     <div class="container">
       <div class="row">
         <div class="section-title">
