fade-out animation added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
     <!-- copyright text -->
     <p class="copyright-text">&copy; 2020 Md Shafkat Samin</p>
   </nav>
+  <div class="fade-out-effect">
+
+  </div>
   <!-- navigation menu end -->
 
   <!-- effect wrap start -->
