--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <p>Hello</p>
           <h2>I'm Shafkat Samin</h2>
           <h1>Frontend Developer</h1>
-          <a href="#about" class="link-item btn-1 outer-shadow hover-in-shadow">More About Me</a>
+          <a href="#portfolio" class="link-item btn-1 outer-shadow hover-in-shadow">More About Me</a>
         </div>
         <div class="home-img">
           <div class="img-box inner-shadow">
