--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- font awesome -->
   <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-  
+
   <!-- main css -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!-- default color skin -->
   <link rel="stylesheet" type="text/css" href="css/skins/color-1.css" />
-  
+
   <!-- style switcher - for demo purposes only -->
-  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-1" href="css/skins/color-1.css" disabled/>
-  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-2" href="css/skins/color-2.css" disabled/>
-  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-3" href="css/skins/color-3.css" disabled/>
-  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-4" href="css/skins/color-4.css" disabled/>
-  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-5" href="css/skins/color-5.css" disabled/>
+  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-1" href="css/skins/color-1.css"
+    disabled />
+  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-2" href="css/skins/color-2.css"
+    disabled />
+  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-3" href="css/skins/color-3.css"
+    disabled />
+  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-4" href="css/skins/color-4.css"
+    disabled />
+  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-5" href="css/skins/color-5.css"
+    disabled />
 
   <link rel="stylesheet" type="text/css" href="css/style-switcher.css" />
 </head>
 
-<body >
+<body>
   <!--header start  -->
   <header class="header">
     <div class="container">
@@ -148,10 +153,16 @@
         </div>
         <div class="about-info">
           <p>
-            <span>Hi! My name is Md. Shafkat Samin. I am a Frontend Developer.</span>
+            <span>Hi! My name is Md. Shafkat Samin.</span>
           </p>
-          <p>Expertise in developing web pages using React.js, HTML5, CSS3, Bootstrap, SASS, Object-Oriented Javascript,
-            ES6, Java, JSON. Good understanding of Document Object Model and DOM Functions.</p>
+          <p><span>I am a Frontend Developer.</span></p>
+          <p>I love to do web frontend design and development. My expertise on client side single page application
+            helped me to build some great project that I am really proud of. I know HTML5, CSS3, React.js, Bootstrap,
+            SASS, ES6, Java, JSON. I am always ready to know new stuffs on this domain. I took my passion as my career
+            and
+            that is why I don't get tired doing these awesome works. Patience is my great weapon and dedication is the
+            key to my
+            success. I am ready to be hired to bring my skills into the next level.</p>
           <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
           <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
         </div>
@@ -173,18 +184,18 @@
             <div class="skill-item">
               <p>Html</p>
               <div class="progress inner-shadow">
-                <div class="progress-bar" style="width: calc(50% - 14px)">
-                  <span>50%</span>
+                <div class="progress-bar" style="width: calc(90% - 14px)">
+                  <span>90%</span>
                 </div>
               </div>
             </div>
             <!-- skills item end -->
             <!-- skills item start -->
             <div class="skill-item">
-              <p>Css3</p>
+              <p>CSS3</p>
               <div class="progress inner-shadow">
-                <div class="progress-bar" style="width: calc(60% - 14px)">
-                  <span>60%</span>
+                <div class="progress-bar" style="width: calc(80% - 14px)">
+                  <span>80%</span>
                 </div>
               </div>
             </div>
@@ -193,8 +204,8 @@
             <div class="skill-item">
               <p>JavaScript</p>
               <div class="progress inner-shadow">
-                <div class="progress-bar" style="width: calc(60% - 14px)">
-                  <span>60%</span>
+                <div class="progress-bar" style="width: calc(90% - 14px)">
+                  <span>90%</span>
                 </div>
               </div>
             </div>
@@ -203,8 +214,8 @@
             <div class="skill-item">
               <p>Java</p>
               <div class="progress inner-shadow">
-                <div class="progress-bar" style="width: calc(60% - 14px)">
-                  <span>60%</span>
+                <div class="progress-bar" style="width: calc(90% - 14px)">
+                  <span>90%</span>
                 </div>
               </div>
             </div>
@@ -213,8 +224,8 @@
             <div class="skill-item">
               <p>React</p>
               <div class="progress inner-shadow">
-                <div class="progress-bar" style="width: calc(60% - 14px)">
-                  <span>60%</span>
+                <div class="progress-bar" style="width: calc(80% - 14px)">
+                  <span>80%</span>
                 </div>
               </div>
             </div>
