about info content changed

--- a/index.html
+++ b/index.html
@@ -154,15 +154,19 @@
         <div class="about-info">
           <p>
             <span>Hi! My name is Md. Shafkat Samin.</span>
+            <span>I am a Frontend Developer.</span>
           </p>
-          <p><span>I am a Frontend Developer.</span></p>
-          <p>I love to do web frontend design and development. My expertise on client side single page application
-            helped me to build some great project that I am really proud of. I know HTML5, CSS3, React.js, Bootstrap,
-            SASS, ES6, Java, JSON. I am always ready to know new stuffs on this domain. I took my passion as my career
-            and
-            that is why I don't get tired doing these awesome works. Patience is my great weapon and dedication is the
-            key to my
-            success. I am ready to be hired to bring my skills into the next level.</p>
+          <p>As a Frontend Developer. I love to do web design and development. My expertise in client-side single-page
+            applications helped me to build some great projects that I am really proud of. I can turn a Figma or PSD
+            design into a fully functional pixel perfect website. I am comfortable with HTML5, CSS3, React.js,
+            Bootstrap, SASS, ES6, Java, JSON. I also have projects on Node.js, express.js, MongoDB, and other backend
+            services.
+          </p>
+          <p>
+            I am always ready to know new stuff in this domain. Learning is a continuous process and I hardly can see
+            myself not trying to learn anything new every single day. I took my passion as my career and that is why I
+            don't get tired of doing these awesome projects. Patience is my great weapon and dedication is the key to my
+            success. I am always ready to avail any opportunity to improve my skills to the next level.</p>
           <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
           <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
         </div>
