--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             myself not trying to learn anything new every single day. I took my passion as my career and that is why I
             don't get tired of doing these awesome projects. Patience is my great weapon and dedication is the key to my
             success. I am always ready to avail any opportunity to improve my skills to the next level.</p>
-          <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
+          <a href="Resume-of-Md-Shafkat-Samin.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
           <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
         </div>
       </div>
